weiter geschrieben, validierung zu ende geführt, weitere arbeit bei trapezprofilen notwendig plots mit tikz erstellt regelung mittels LQR angefangen für plot NOTWENDIG ÜBERPRÜFUNG BEWEGUNGSGLEICHUNGEN ZUSTANDSRAUM

--- a/Latex Vorlage 20160920/aufbau/Inhaltsverzeichnistex.tex
+++ b/Latex Vorlage 20160920/aufbau/Inhaltsverzeichnistex.tex
@@ -1,6 +1,8 @@
 \documentclass[]{article}
 \usepackage{enumitem}
 \usepackage[T1]{fontenc} 
+\usepackage{pgfplots}
+\listfiles
 \setlist[enumerate]{label*=\arabic*.}
 \newcounter{saveenumerate}
 \makeatletter
@@ -49,6 +51,7 @@
 	\end{enumerate}
 	\item Schlussfolgerungen und Ausblick
 \end{enumerate}
+
 
 
 
