--- a/Latex Vorlage 20160920/main.tex
+++ b/Latex Vorlage 20160920/main.tex
@@ -51,6 +51,7 @@
 
 \usepackage{tikz}							% package für blockschaltbilder in latex
 \usetikzlibrary{arrows, decorations.markings, positioning}
+\usepackage{pgfplots}
 % for double arrows a la chef
 % adapt line thickness and line width, if needed
 \tikzstyle{vecArrow} = [semithick, decoration={markings,mark=at position
