--- a/Latex Vorlage 20160920/modellierung.tex
+++ b/Latex Vorlage 20160920/modellierung.tex
@@ -106,7 +106,9 @@ Mithilfe der Gleichungen~\ref{eq:energieKinTotal} und~\ref{eq:energiePotTotal} w
 	\frac{d}{dt} \frac{\partial L }{\partial \dot{\varphi}_2} - \frac{\partial L }{\partial \varphi_2} &= -d_\mathrm{2} (\dot{\varphi}_2 - \dot{\varphi}_1 ) \text{.} \label{eq:lagrangePhi2}
 \end{align}
 
-aufgestellt. Die nicht-konservativen Kräfte sind die Antriebskraft des Motors, die Reibung zwischen Linearführung und Wagen sowie die Dämpfungen der Pendellager. In \cite{Behm2016} werden zwei Möglichkeiten zur Regelung und Steuerung des mechatronischen Systems aufgezeigt. Zum einen kann der Wagen momentengesteuert bewegt werden. Hierbei wird ein Wunschmoment $ M_\mathrm{soll} $ an den Motor übertragen. Bei der Umsetzung des Moments hat die Reibung der Linearführung und jedoch einen großen Einfluss auf die letztendlich resultierende Geschwindigkeit des Wagens. Um eine realitätstreue Modellierung des Systems zu gewährleisten, wird eine Berücksichtigung der Reibung vorausgesetzt, wenn das Pendel momentengesteuert betrieben wird. Zum anderen ist es möglich, eine Sollgeschwindigkkeit $ v_\mathrm{soll} $ vorzugeben. Dies hat den Vorteil, dass die Reibung des Systems vernachlässigt werden kann. Außerdem wird in \cite{Behm2016} aufgezeigt, dass bei der Regelung des inversen Einfachpendels mit Drehzahlvorgabe bessere Regelungsgebnisse erzielt werden. Aus diesen Gründen wird im folgenden die Wagenbeschleunigung $ \ddot{x} $ als Eingangsgröße des Systems gewählt. Dies hat zur Folge, dass eine Rückwirkung der Pendelbewegung auf den Wagen ausgeschlossen wird. Aufgrund der hohen Haftreibung der Linearführung und des geringen Gewichts der realen Pendelstäbe (~\ref{sec:} SIEHE TABELLE MIT KONSTANTEN) ist diese Annahme legitim [NACHWEIS MÖGLICH: MESSDATEN AUSSCHWINGVERSUCH]. Für die Ansteuerung des Motors, wird die Sollgeschwindigkeit durch eine einfache Integration der vorgegebenen Beschleunigung ermittelt. Dadurch ist die explizite Lösung von Gleichung~\ref{eq:lagrangeX}, die die Bewegungsgleichung des Wagens liefert, nicht mehr notwendig. Nach Bildung der Ableitungen der Lagrange-Funktion und Umformen von Gleichungen~\ref{eq:lagrangePhi1} und~\ref{eq:lagrangePhi2} lassen sich die Bewegungsgleichungen des inversen Doppelpendels aufstellen:
+aufgestellt. Die nicht-konservativen Kräfte sind die Antriebskraft des Motors, die Reibung zwischen Linearführung und Wagen sowie die Dämpfungen der Pendellager. In \cite{Behm2016} werden zwei Möglichkeiten zur Regelung und Steuerung des mechatronischen Systems aufgezeigt. Zum einen kann der Wagen momentengesteuert bewegt werden. Hierbei wird ein Wunschmoment $ M_\mathrm{soll} $ an den Motor übertragen. Bei der Umsetzung des Moments hat die Reibung der Linearführung und jedoch einen großen Einfluss auf die letztendlich resultierende Geschwindigkeit des Wagens. Um eine realitätstreue Modellierung des Systems zu gewährleisten, wird eine Berücksichtigung der Reibung vorausgesetzt, wenn das Pendel momentengesteuert betrieben wird. Zum anderen ist es möglich, eine Sollgeschwindigkkeit $ v_\mathrm{soll} $ vorzugeben. Dies hat den Vorteil, dass die Reibung des Systems vernachlässigt werden kann. Außerdem wird in \cite{Behm2016} aufgezeigt, dass bei der Regelung des inversen Einfachpendels mit Drehzahlvorgabe bessere Regelungsgebnisse erzielt werden. Es wird die Vermutung aufgestellt, dass aufgrund der hohen Haftreibung der Linearführung und des geringen Gewichts der realen Pendelstäbe eine Rückwirkung der Pendelbewegung auf die Wagenposition ausgeschlossen wird. Diese Annahme wird verifiziert, indem die relative Auslenkung des Wagens während eines Ausschwingvorgangs des Doppelpendels gemessen wird. In Bild~\ref{fig:rueckwirkungpendelaufwagen} ist zu sehen, dass die maximale Auslenkung wenige Mikrometer beträgt, wodurch der Einfluss der Pendelbewegung auf die Wagenposition im folgenden vernachlässigt werden kann. Aus den genannten Gründen wird die Wagenbeschleunigung $ \ddot{x} $ als Eingangsgröße des Systems gewählt. 
+Für die Ansteuerung des Motors, wird die Sollgeschwindigkeit durch eine einfache Integration der vorgegebenen Beschleunigung ermittelt. Dadurch ist die explizite Lösung von Gleichung~\ref{eq:lagrangeX}, die die Bewegungsgleichung des Wagens liefert, nicht mehr notwendig. Nach Bildung der Ableitungen der Lagrange-Funktion und Umformen von Gleichungen~\ref{eq:lagrangePhi1} und~\ref{eq:lagrangePhi2} lassen sich die Bewegungsgleichungen des inversen Doppelpendels aufstellen:
+%
 \begin{align}
 	\ddot{x} = u \label{eq:ddx}
 \end{align}
@@ -130,6 +132,12 @@ aufgestellt. Die nicht-konservativen Kräfte sind die Antriebskraft des Motors, d
 	\end{split}
 \end{align} 
 
+\begin{figure}
+	\centering
+	\input{plots/rueckwirkungpendelaufwagen.tex}
+	\caption{Relative Wagenposition beim Ausschwingvorgang des Doppelpendels}
+	\label{fig:rueckwirkungpendelaufwagen}
+\end{figure}
 
 In den Gleichungen~\ref{eq:ddphi1} und~\ref{eq:ddphi2} ist zu sehen, dass Winkelbeschleunigungen jeweils noch voneinander abhängen. In der Bewegungsgleichung für den inneren Pendelstab $ \ddot{\varphi}_1 $ taucht die Winkelbeschleunigung $ \ddot{\varphi}_2 $ auf und umgekehrt. Führt man Simulationen mit den Gleichungen~\ref{eq:ddphi1} und~\ref{eq:ddphi2} aus, tritt eine algebraische Schleife auf. Das Ergebnis der einen Gleichung wird im selben Zeitschritt für die Auswertung der anderen Winkelbeschleunigung benötigt. Um dieses Problem zu umgehen, werden die Gleichungen entkoppelt. Die Gleichungen der Form
 %
