--- a/Latex Vorlage 20160920/literaturserov.bib
+++ b/Latex Vorlage 20160920/literaturserov.bib
@@ -446,4 +446,17 @@ Eine Sonderstellung nimmt der Regler mit endlicher Einstellzeit ein.},
   url           = {http://dx.doi.org/10.1007/978-3-662-52676-7_7},
 }
 
+@Article{Luo1995,
+  author    = {Jia Luo and C. E. Lan},
+  title     = {Determination of weighting matrices of a linear quadratic regulator},
+  journal   = {Journal of Guidance, Control, and Dynamics},
+  year      = {1995},
+  volume    = {18},
+  number    = {6},
+  pages     = {1462--1463},
+  month     = {nov},
+  doi       = {10.2514/3.21569},
+  publisher = {American Institute of Aeronautics and Astronautics ({AIAA})},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
